--- a/pergipergi/src/main/resources/templates/kosong.html
+++ b/pergipergi/src/main/resources/templates/kosong.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Error!!!</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 </head>
 <body>
-    <h1>Parameter tidak ada atau salah.</h1>
-    <a href="/agensi/viewAll">Kembali</a>
+    <h1>Agensi sedang buka atau parameter salah.</h1><br>
+    <a class="btn btn-primary" href="/agensi/viewall">Kembali</a>
+    <a class="btn btn-primary" href="/">Home</a>
 </body>
 </html>
