--- a/pergipergi/src/main/resources/templates/view-agensi.html
+++ b/pergipergi/src/main/resources/templates/view-agensi.html
@@ -1,17 +1,42 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
-    <title>View Travel Agensi</title>
-</head>
-
+    <title>PergiPergi</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous"></head>
 <body>
-    <h2>Informasi Agensi</h2>
-    <h3 th:text = "'ID Agensi     : ' + ${agensi.getIdAgensi()}"></h3>
-    <h3 th:text = "'Nama Agensi   : ' + ${agensi.getNamaAgensi()}"></h3>
-    <h3 th:text = "'Alamat Agensi : ' + ${agensi.getAlamatAgensi()}"></h3>
-    <h3 th:text = "'Nomor Telepon : ' + ${agensi.getNoTelepon()}"></h3>
-    <a href="/agensi/viewAll">Kembali</a>
+<div class="container">
+    <div class="card m-4 p-4">
+        <div class="card-body">
+            <div class="justify-content-center">
+                <h2>Detail Agensi</h2>
+                <br>
+                <p th:text="'Id Agensi    : ' + ${agensi.noAgensi}"></p>
+                <p th:text="'Nama Agensi  : ' + ${agensi.namaAgensi}"></p>
+                <p th:text="'Alamat Agensi: ' + ${agensi.alamatAgensi}"></p>
+                <p th:text="'Nomor Telepon: ' + ${agensi.noTeleponAgensi}"></p>
+                <p th:text="'Waktu Buka: ' + ${agensi.waktuBuka}"></p>
+                <p th:text="'Waktu Tutup: ' + ${agensi.waktuTutup}"></p>
+                <a class="btn btn-danger" th:href="@{/agensi/hapus/} + ${agensi.noAgensi}">Hapus</a>
+                <div class="col">
+                    <br>
+                    <h4>Tour Guide : </h4>
+                    <hr>
+                    <div th:each="guide : ${listTourGuide}">
+                        <p th:text="'Nama : ' + ${guide.namaTourGuide}"></p>
+                        <p th:if="${guide.jenisKelamin == 0}">Jenis Kelamin : Perempuan</p>
+                        <p th:if="${guide.jenisKelamin == 1}">Jenis Kelamin : Laki-laki</p>
+                        <a class="btn btn-primary" th:href="@{/tour-guide/update/} + ${guide.noTourGuide}">Update Tour Guide</a>
+                        <a class="btn btn-danger" th:href="@{/tour-guide/hapus/} + ${guide.noTourGuide}">Hapus Tour Guide</a>
+                        <hr>
+                    </div>
+                </div>
+                <br>
+                <a class="btn btn-primary" href="/agensi/viewall">Kembali</a>
+                <a class="btn btn-primary" th:href="@{/tour-guide/add/} + ${agensi.noAgensi}">Tambah Guide</a>
+            </div>
+        </div>
+    </div>
+</div>
+ 
 </body>
-
-
 </html>
