--- a/pergipergi/src/main/resources/templates/kosong.html
+++ b/pergipergi/src/main/resources/templates/kosong.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 </head>
 <body>
-    <h1>Agensi sedang buka atau parameter salah.</h1><br>
+    <h1>Agensi sedang buka, terdapat tour guide (untuk penghapusan agensi), atau parameter salah.</h1><br>
     <a class="btn btn-primary" href="/agensi/viewall">Kembali</a>
     <a class="btn btn-primary" href="/">Home</a>
 </body>
