--- a/pergipergi/src/main/resources/templates/error9999/400.html
+++ b/pergipergi/src/main/resources/templates/error9999/400.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
-    <title>Ganti Nomor Telepon Travel Agensi</title>
+    <title>400 bad request</title>
     <object th:include="fragments/fragment :: css" th:remove="tag"></object>
     <object th:include="fragments/fragment :: css" th:remove="tag"></object>
 </head>
-
 <body>
     <nav th:replace="fragments/fragment :: navbar"></nav>
-    
-    <h2>Nomor Telepon Berhasil Diubah</h2>
-    <h3 th:text = "'Nomor Telepon Baru: ' + ${agensi.getNoTelepon()}"></h3>
-    <a href="/agensi/viewAll">Kembali</a>
+
+    <div class="container-fluid">
+       <h2>Maaf, terjadi kesalahan Bad Request.</h2>
+       <a th:href="@{/}">Kembali ke Home</a>
+    </div>
+ 
 </body>
-
-
 </html>
