--- a/pergipergi/src/main/resources/templates/view-agensi.html
+++ b/pergipergi/src/main/resources/templates/view-agensi.html
@@ -2,41 +2,92 @@
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
     <title>PergiPergi</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous"></head>
+    <object th:include="fragments/fragment :: css" th:remove="tag"></object>
+    <object th:include="fragments/fragment :: css" th:remove="tag"></object>
+</head>
 <body>
-<div class="container">
-    <div class="card m-4 p-4">
-        <div class="card-body">
-            <div class="justify-content-center">
-                <h2>Detail Agensi</h2>
-                <br>
-                <p th:text="'Id Agensi    : ' + ${agensi.noAgensi}"></p>
-                <p th:text="'Nama Agensi  : ' + ${agensi.namaAgensi}"></p>
-                <p th:text="'Alamat Agensi: ' + ${agensi.alamatAgensi}"></p>
-                <p th:text="'Nomor Telepon: ' + ${agensi.noTeleponAgensi}"></p>
-                <p th:text="'Waktu Buka: ' + ${agensi.waktuBuka}"></p>
-                <p th:text="'Waktu Tutup: ' + ${agensi.waktuTutup}"></p>
-                <a class="btn btn-danger" th:href="@{/agensi/hapus/} + ${agensi.noAgensi}">Hapus</a>
-                <div class="col">
+    <nav th:replace="fragments/fragment :: navbar"></nav>
+
+    <div class="container">
+        <div class="card m-4 p-4">
+            <div class="card-body">
+                <div class="justify-content-center">
+                    <h2>Detail Agensi</h2>
                     <br>
-                    <h4>Tour Guide : </h4>
-                    <hr>
-                    <div th:each="guide : ${listTourGuide}">
-                        <p th:text="'Nama : ' + ${guide.namaTourGuide}"></p>
-                        <p th:if="${guide.jenisKelamin == 0}">Jenis Kelamin : Perempuan</p>
-                        <p th:if="${guide.jenisKelamin == 1}">Jenis Kelamin : Laki-laki</p>
-                        <a class="btn btn-primary" th:href="@{/tour-guide/update/} + ${guide.noTourGuide}">Update Tour Guide</a>
-                        <a class="btn btn-danger" th:href="@{/tour-guide/hapus/} + ${guide.noTourGuide}">Hapus Tour Guide</a>
-                        <hr>
+                    <p th:text="'Id Agensi    : ' + ${agensi.noAgensi}"></p>
+                    <p th:text="'Nama Agensi  : ' + ${agensi.namaAgensi}"></p>
+                    <p th:text="'Alamat Agensi: ' + ${agensi.alamatAgensi}"></p>
+                    <p th:text="'Nomor Telepon: ' + ${agensi.noTeleponAgensi}"></p>
+                    <p th:text="'Waktu Buka: ' + ${agensi.waktuBuka}"></p>
+                    <p th:text="'Waktu Tutup: ' + ${agensi.waktuTutup}"></p>
+                    <a class="btn btn-danger" th:href="@{/agensi/hapus/} + ${agensi.noAgensi}">Hapus</a>
+                    <br>
+                    <div th:if="*{listTourGuide.size() != 0}">
+                        <form th:action="@{/tour-guide/delete}" th:object="${agensi}" method="post">
+                            <input type="hidden" th:field="*{noAgensi}" />
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <th>No</th>
+                                        <th>No. Tour Guide</th>
+                                        <th>Nama Tour Guide</th>
+                                        <th>Jenis Kelamin</th>
+                                        <th>Update</th>
+                                        <th>Hapus</th>
+
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr th:each="tourGuide, iterationStatus : ${listTourGuide}"
+                                        th:style="${iterationStatus.even} ? 'font-weight:bold;'">
+                                        <td th:text="${iterationStatus.count}"></td>
+                                        <td th:text="${tourGuide.noTourGuide}"></td>
+                                        <td th:text="${tourGuide.namaTourGuide}"></td>
+                                        <td th:if="${tourGuide.jenisKelamin == 0}">Perempuan</td>
+                                        <td th:if="${tourGuide.jenisKelamin == 1}">Laki-laki</td>
+                                        <td><a class="btn btn-primary" th:href="@{/tour-guide/update/} + ${tourGuide.noTourGuide}">Update</a></td>
+                                        <td>
+                                            <input type="checkbox" class="form-check-input" th:field="*{listTourGuide}"
+                                                id="flexCheckDefault" th:value="${tourGuide.noTourGuide}">
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                            <input type="submit" class="btn btn-danger" value="Delete yang dipilih">
+                            <br>
+                        </form>
+                    </div> <br><br>
+
+                    <div th:if="*{listDestinasi.size() != 0}">
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th>No</th>
+                                    <th>No. Destinasi</th>
+                                    <th>Nama Destinasi</th>
+                                    <th>Bebas Visa</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr th:each="dest, iterationStatus : ${listDestinasi}"
+                                    th:style="${iterationStatus.even} ? 'font-weight:bold;'">
+                                    <td th:text="${iterationStatus.count}"></td>
+                                    <td th:text="${dest.noDestinasi}"></td>
+                                    <td th:text="${dest.negaraDestinasi}"></td>
+                                    <td th:if="${dest.isBebasVisa == false}">TIDAK</td>
+                                    <td th:if="${dest.isBebasVisa == true}">YA</td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
+
+                    <br>
+                    <a class="btn btn-primary" href="/agensi/viewall">Kembali</a>
+                    <a class="btn btn-primary" th:href="@{/tour-guide/add/} + ${agensi.noAgensi}">Tambah Guide</a>
                 </div>
-                <br>
-                <a class="btn btn-primary" href="/agensi/viewall">Kembali</a>
-                <a class="btn btn-primary" th:href="@{/tour-guide/add/} + ${agensi.noAgensi}">Tambah Guide</a>
             </div>
         </div>
     </div>
-</div>
- 
+
 </body>
 </html>
