--- a/pergipergi/src/main/resources/templates/viewall-agensi.html
+++ b/pergipergi/src/main/resources/templates/viewall-agensi.html
@@ -2,34 +2,43 @@
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
     <title>PergiPergi</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous"></head>
+    <object th:include="fragments/fragment :: css" th:remove="tag"></object>
+    <object th:include="fragments/fragment :: css" th:remove="tag"></object>
+</head>
 <body>
+<nav th:replace="fragments/fragment :: navbar"></nav>
 <div class="container">
     <div class="card m-4 p-4">
         <div class="card-body">
             <div class="justify-content-center">
                 <h2>List Agensi</h2>
                 <br>
-                <div th:each="agensi : ${listAgensi}">
-                    <p th:text="'Id Agensi    : ' + ${agensi.noAgensi}"></p>
-                    <p th:text="'Nama Agensi  : ' + ${agensi.namaAgensi}"></p>
-                    <p th:text="'Alamat Agensi: ' + ${agensi.alamatAgensi}"></p>
-                    <p th:text="'Nomor Telepon: ' + ${agensi.noTeleponAgensi}"></p>
-                    <p th:text="'Waktu Buka: ' + ${agensi.waktuBuka}"></p>
-                    <p th:text="'Waktu Tutup: ' + ${agensi.waktuTutup}"></p>
-                    <div class="col">
-                        <a class="btn btn-primary" th:href="@{/agensi/view(noAgensi=${agensi.noAgensi})}">Detail
-                            Agensi</a>
-                        <a class="btn btn-primary" th:href="@{/agensi/update/} + ${agensi.noAgensi}">Update Agensi</a>
-                    </div>
-                    <hr>
-                </div>
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>No. Agensi</th>
+                            <th>Nama agensi</th>
+                            <th>Detail</th>
+                            <th>Update</th>
+                            <th>Hapus</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr th:each="agensi : ${listAgensi}">
+                            <td th:text="${agensi.noAgensi}"></td>
+                            <td th:text="${agensi.namaAgensi}"></td>
+                            <td><a class="btn btn-primary" th:href="@{/agensi/view(noAgensi=${agensi.noAgensi})}">Detail Agensi</a></td>
+                            <td><a class="btn btn-primary" th:href="@{/agensi/update/} + ${agensi.noAgensi}">Update Agensi</a></td>
+                            <td><a class="btn btn-danger" th:href="@{/agensi/hapus/} + ${agensi.noAgensi}">Hapus Agensi</a></td>
+                        </tr>
+                    </tbody>
+                </table>
                 <br>
                 <a class="btn btn-primary" href="/">Home</a>
             </div>
         </div>
     </div>
 </div>
- 
+
 </body>
 </html>
