Pengerjaan challenge demo

--- a/pergipergi/src/main/resources/templates/fragments/fragment.html
+++ b/pergipergi/src/main/resources/templates/fragments/fragment.html
@@ -53,3 +53,9 @@
         </div>
     </nav>
 </body>
+
+
+<footer th:fragment="kaki2">
+    <p th:text="${kani}"></p>
+    <p th:text="${yasa}"></p>
+</footer>
