Pengerjaan tutorial 6 first commit: completed

--- a/pergipergi/src/main/resources/templates/update-password-success.html
+++ b/pergipergi/src/main/resources/templates/update-password-success.html
@@ -11,7 +11,7 @@
     <div class="card m-4 p-4">
         <div class="card-body">
             <div class="justify-content-center">
-                <h2 th:text="'Tour Guide dengan no Agensi ' + ${agensi} + ' berhasil dihapus.'"></h2>
+                <h2>Password anda berhasil diubah</h2>
                 <br>
                 <a class="btn btn-primary" href="/">Home</a>
             </div>
