--- a/pergipergi/src/main/resources/templates/add-destinasi.html
+++ b/pergipergi/src/main/resources/templates/add-destinasi.html
@@ -4,7 +4,7 @@
 <head>
   <title>PergiPergi</title>
   <object th:include="fragments/fragment :: css" th:remove="tag"></object>
-  <object th:include="fragments/fragment :: css" th:remove="tag"></object>
+    <object th:include="fragments/fragment :: js" th:remove="tag"></object>
 </head>
  
 <body>
