--- a/pergipergi/src/main/resources/templates/errorx/400.html
+++ b/pergipergi/src/main/resources/templates/errorx/400.html
@@ -3,7 +3,7 @@
 <head>
     <title>400 bad request</title>
     <object th:include="fragments/fragment :: css" th:remove="tag"></object>
-    <object th:include="fragments/fragment :: css" th:remove="tag"></object>
+    <object th:include="fragments/fragment :: js" th:remove="tag"></object>
 </head>
 <body>
     <nav th:replace="fragments/fragment :: navbar"></nav>
