--- a/pergipergi/src/main/resources/templates/errorx/404.html
+++ b/pergipergi/src/main/resources/templates/errorx/404.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
-    <title>500 internal server error</title>
+    <title>404 not found</title>
     <object th:include="fragments/fragment :: css" th:remove="tag"></object>
-    <object th:include="fragments/fragment :: css" th:remove="tag"></object>
+    <object th:include="fragments/fragment :: js" th:remove="tag"></object>
 </head>
 <body>
     <nav th:replace="fragments/fragment :: navbar"></nav>
 
     <div class="container-fluid">
-       <h2>Maaf, terjadi kesalahan pada server.</h2>
+       <h2>Halaman tidak ditemukan</h2>
        <a th:href="@{/}">Kembali ke Home</a>
     </div>
  
