--- a/pergipergi/src/main/resources/templates/home.html
+++ b/pergipergi/src/main/resources/templates/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Home</title>
     <object th:include="fragments/fragment :: css" th:remove="tag"></object>
-    <object th:include="fragments/fragment :: css" th:remove="tag"></object>
+    <object th:include="fragments/fragment :: js" th:remove="tag"></object>
 </head>
 <body>
 
@@ -12,14 +12,16 @@
 
     <div class="d-flex justify-content-center">
         <div class="m-4">
+            <h2 th:text="'Hello ' + ${#httpServletRequest.remoteUser} + '!'">Masuk sebagai</h2>
             <h2>Selamat datang di PergiPergi!</h2>
             <div class="d-flex justify-content-center">
                 <a th:href="@{/agensi/viewall}" class="mx-2 btn btn-primary">View All Agensi</a>
                 <a th:href="@{/agensi/add}" class="mx-2 btn btn-outline-primary">Add Agensi</a>
             </div>
             <div class="my-3 d-flex justify-content-center">
+                <a th:href="@{/user/add}" class="mx-2 btn btn-primary">Tambah User</a>
                 <a th:href="@{/destinasi/viewall}" class="mx-2 btn btn-primary">View All Destinasi</a>
-                <a th:href="@{/destinasi/add}" class="mx-2 btn btn-outline-primary">Add Destinasi</a>
+                <a th:if="${isAgen == true}" th:href="@{/destinasi/add}" class="mx-2 btn btn-outline-primary">Add Destinasi</a>
             </div>
         </div>
 
