--- a/pergipergi/src/main/resources/templates/form-add-user.html
+++ b/pergipergi/src/main/resources/templates/form-add-user.html
@@ -27,7 +27,7 @@
 
                         <label>Password</label>
                         <input type="password" name="password" class="form-control"
-                        pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[!@#$%^&*_=+-]).{8,}$"
+                        pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[!@#$%^&*_=+-,.:;]).{8,}$"
                         title="Password minimal berisi 1 angka, 1 huruf besar, 1 huruf kecil, 1 simbol, dan berjumlah 8 karakter.">
 
                         <label>Role</label>
