--- a/pergipergi/src/main/resources/templates/form-change-password.html
+++ b/pergipergi/src/main/resources/templates/form-change-password.html
@@ -22,13 +22,13 @@
  
                     Password baru : <br>
                     <input class="form-control" type="password" name="newPass" th:value="*{newPass}"
-                    pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[!@#$%^&*_=+-]).{8,}$"
+                    pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[!@#$%^&*_=+-,.:;]).{8,}$"
                     title="Password minimal berisi 1 angka, 1 huruf besar, 1 huruf kecil, 1 simbol, dan berjumlah 8 karakter."/>
                     <br>
                     
                     Konfirmasi password baru : <br>
                     <input class="form-control" type="password" name="passConfirm" th:value="*{passConfirm}" 
-                    pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[!@#$%^&*_=+-]).{8,}$"
+                    pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[!@#$%^&*_=+-,.:;]).{8,}$"
                     title="Password minimal berisi 1 angka, 1 huruf besar, 1 huruf kecil, 1 simbol, dan berjumlah 8 karakter."/>
                     <br>
  
