--- a/pergipergi/src/main/resources/templates/home.html
+++ b/pergipergi/src/main/resources/templates/home.html
@@ -21,6 +21,7 @@
             <div class="my-3 d-flex justify-content-center">
                 <a th:href="@{/user/add}" class="mx-2 btn btn-primary">Tambah User</a>
                 <a th:href="@{/destinasi/viewall}" class="mx-2 btn btn-primary">View All Destinasi</a>
+                <a th:href="@{/user/password-change}" class="mx-2 btn btn-primary">Ubah Password</a>
                 <a th:if="${isAgen == true}" th:href="@{/destinasi/add}" class="mx-2 btn btn-outline-primary">Add Destinasi</a>
             </div>
         </div>
