--- a/pergipergi/src/main/resources/templates/kosong.html
+++ b/pergipergi/src/main/resources/templates/kosong.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav th:replace="fragments/fragment :: navbar"></nav>
-    <h1>Agensi sedang buka, terdapat tour guide (untuk penghapusan agensi), atau parameter salah.</h1><br>
+    <h1>Error: Email sudah dipakai.</h1><br>
     <a class="btn btn-primary" href="/agensi/viewall">Kembali</a>
     <a class="btn btn-primary" href="/">Home</a>
 </body>
